# Resurgence-II

./: CODE_OF_CONDUCT.md  CONTRIBUTORS.md  PROJECT_STRUCTURE.md  README.md  build.sh  docker-compose.yml  package-lock.json  package.json  setup-complete.sh
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/dashboard/beneficiaries/: page.tsx
app/dashboard/funds/: page.tsx
app/dashboard/merchants/: page.tsx
app/dashboard/supply-chain/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
backend/: .gitignore  Dockerfile  README.md  package.json  tsconfig.json
backend/src/: index.ts
backend/src/controllers/: auth.routes.ts  beneficiary.routes.ts  fund.routes.ts  health.routes.ts  merchant.routes.ts  supplychain.routes.ts  transfer.routes.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/utils/: logger.ts
lib/: api.ts  auth-context.tsx
smartcontract/: .gitignore  Cargo.toml  README.md  build.sh
smartcontract/.cargo/: config.toml
smartcontract/src/: aid_registry.rs  anti_fraud.rs  beneficiary_manager.rs  cash_transfer.rs  lib.rs  merchant_network.rs  supply_chain_tracker.rs
